# mdx-canvas

./: .gitignore  AGENTS.md  Contributing.md  Marine_Biology_Course_Outline.md  README.md  __init__.py  canvas_creator.py  claude-generated-course-outline.md  create_all.py  html-generator.py  parser.py  pyproject.toml  requirements.txt  schema.json  set_default_grade.py  spec.md  superpowers-skill-style-cheatsheet.md  testing_course_info.json  update_canvas.py
.myteam/: info.md  role.md
demo-course/: _quarto.yml  course.canvas.md.xml.jinja  demo-assignment.canvas.md.xml.jinja  demo-md-page.content.md  demo-mermaid.canvas.md.xml.jinja  demo-page.canvas.md.xml.jinja  demo-quarto-slides.canvas.md.xml.jinja  demo-quiz.canvas.md.xml.jinja  demo.css  external-diagram.mmd
demo_course/: course.canvas.md.xml  create_all.py  global_args.json  global_args.yaml  post_to_canvas.py  style.css  testing_course_info.json
documents/: arguments.md  course_info.md  css.md  jinja_templates.md  migrating_to_explicit_ids.md
generated-quizzes/: final.html  sample-quiz.html
incomplete/: day-assignments.canvas.md.html.jinja  testlab.canvas.md
json-quiz-files/: Final.json  Sample Quiz.json
logs/: output.json
marine-biology/: course.canvas.md.xml.jinja
marine-biology-claude-copy/: course.canvas.md.xml  course_info.json  global_args.yaml
marine-biology-course/: course.canvas.md.xml
marine-biology-course-codex-copy/: course.canvas.md.xml  syllabus.md
markdown-files/: Final.canvas.md  Midterm.canvas.md  codebuddy-account.canvas.md  codebuddy-account.md  day-assignments.canvas.md.html.jinja  day-assignments.md  day-assignments.md.html.jinja  homeworks.canvas.md  homeworks.md  labs.canvas.md  labs.md  modules.md  sample-quiz.canvas.md  syllabus-quiz.canvas.xml
markdown-quiz-files/: Final.md  day-assignments.md  homeworks.md  labs.md  modules.md  overrides.md  sample-quiz.md  survey_page.md
mdxcanvas/: __init__.py  algorithms.py  canvas_creator.py  deploy.py  deployment_report.py  document_schema.py  error_helpers.py  extensions.py  generate_result.py  inline_styleing.py  jinja_parser.py  jinja_processing.py  main.py  markdown_processing.py  midterm.json  midterm_yaml.json  our_logging.py  parallel.py  parser.py  processing_context.py  resources.py  (+5 more)
(+527 files in other folders)
