[tool.poetry]
name = "mdxcanvas"
version = "0.0.0"
description = "A Canvas LMS API wrapper for maintaining content in markdown"
authors = ["Gordon Bean <gbean@cs.byu.edu>", "Preston Raab <phr23@byu.edu>", "Robert Greathouse <robbykap@byu.edu>", "Ethan Dye <mrtops@byu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.6"
Markdown = "^3.10.2"
MarkupSafe = "^3.0.3"
CanvasAPI = "^3.4.0"
pytz = "^2026.1.post1"
beautifulsoup4 = "^4.14.3"
Pygments = "^2.19.2"
strictyaml = "^1.7.3"
cssutils = "^2.11.1"
markdowndata = "^0.1.1"
pyyaml = "^6.0.3"
pymdown-extensions = "^10.21"
quarto = "^0.1.0"
quarto-cli = "^1.8.27"
Pillow = "^12.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
poetry-version-from-file = "^1.1.0"

[tool.poetry.plugins.version-from-file]
enabled = "true"
file="mdxcanvas/VERSION"

[tool.poetry.scripts]
mdxcanvas = "mdxcanvas.main:entry"
erasecanvas = "mdxcanvas.erasecanvas.main:entry"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-version-from-file"]
build-backend = "poetry.core.masonry.api"
